--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,10 @@
 DATABASE_URL=sqlite:///./dev.db
 SECRET_KEY=change-this-to-a-strong-secret
-TWILIO_ACCOUNT_SID=your_sid
-TWILIO_AUTH_TOKEN=your_token
+TWILIO_ACCOUNT_SID=ACb1cb09cff760d4e670f547bf782640f5
+TWILIO_AUTH_TOKEN=bf339e82767f0e2c2790065ac6553f6e
 TWILIO_WHATSAPP_FROM=whatsapp:+14155238886
+
+DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:8001/postgres
+ENV=dev
+
+API_URL=https://cecila-opalescent-compulsorily.ngrok-free.dev
