--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,13 @@ services:
     container_name: guyana-booker-db
     restart: always
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
-      POSTGRES_DB: booker
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
     volumes:
       - db-data:/var/lib/postgresql/data
     ports:
-       - "8001:8001"
+      - "8001:5432"
 
   backend:
     build: ./backend
@@ -25,7 +25,8 @@ services:
     volumes:
       - ./backend/app:/app/app
     ports:
-      - "8000:8000"
+      - "8002:8000"
+
 
   frontend:
     build: ./frontend
