--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,16 @@
-FROM python:3.12-slim
+FROM python:3.11-slim
+
 WORKDIR /app
+
+# system deps for psycopg2
+RUN apt-get update && apt-get install -y gcc libpq-dev && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
 COPY . .
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+ENV PORT=10000
+EXPOSE 10000
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "10000"]
