--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "guyana-booker",
-    "slug": "guyana-booker",
+    "name": "bookitgy",
+    "slug": "bookitgy",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
